--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,12 @@
+ /* Website font */
+ .open-sans-webfont{
+  font-family: "Open Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
 /* Nav style */
 .navbar{
     display: flex;
@@ -5,6 +14,7 @@
     justify-content: space-between;
     margin: 0 160px;
 }
+/* Button style */
 .btn{
     font-size: 18px;
     font-weight: 600;
@@ -13,5 +23,9 @@
     color: #006A50;
     background-color: white;
     border-radius: 8px;
+}
+nav ul li{
+    list-style: none;
+
 }
  
