--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,7 @@ nav ul li{
     justify-content: space-between;
     align-items: center;
     margin: 0 160px;
+    background-color: #C6E4D6;
 }
 .banner-img{
     width: 474px;
