more quote style

--- a/style/style.css
+++ b/style/style.css
@@ -92,7 +92,7 @@ nav ul li{
     font-weight: bold;
     color:  rgba(14, 14, 14, 0.8);
 }
-.sec-margin{
+section{
     margin: 66px 0;
 }
 .dis-margin{
