--- a/style/style.css
+++ b/style/style.css
@@ -171,3 +171,34 @@ section{
     background-color: white;
     border-radius: 24px;
 }
+/* news section */
+.News-section{
+    display: flex;
+    justify-content: space-between;
+    gap: 28px;
+}
+.time{
+    display: flex;
+    gap: 10px;
+}
+.news-title{
+    font-size: 27px;
+    font-weight: bold;
+}
+.news-btn{
+    font-size: 15px;
+    font-weight: 600;
+    background-color: #006A50;
+    color: white;
+    padding: 11px 22px;
+    border-radius: 7px;
+    border: none;
+}
+.News-section{
+    background-color: white;
+    border-radius: 24px;
+    padding: 35px;
+}
+.news-image{
+    border-radius: 24px;
+}
