--- a/style/style.css
+++ b/style/style.css
@@ -82,6 +82,7 @@ nav ul li{
 .site-heading{
     font-size: 35px;
     font-weight: bold;
+
 }
 .site-discription{
     font-size: 14px;
@@ -201,4 +202,27 @@ section{
 }
 .news-image{
     border-radius: 24px;
+}
+/* donate section */
+
+
+.donate-title{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.amounts{
+    display: flex;
+    justify-content: space-evenly;
+}
+.amount{
+    background-color: white;
+    padding: 32px;
+    border-radius: 16px;
+}
+.donate-amount{
+    align-items: stretch;
+    color: #006A50;
+    background-color: aqua;
+     
 }
