--- a/style/style.css
+++ b/style/style.css
@@ -221,8 +221,19 @@ section{
     border-radius: 16px;
 }
 .donate-amount{
-    align-items: stretch;
-    color: #006A50;
-    background-color: aqua;
-     
+    position: absolute;
+    width: 70%;
+    outline: none;
+    font-size: 2.2em;
+    text-align: center;
+    
 }
+.donate-amounts{
+    display: flex;
+    justify-content: center;
+}
+
+input::placeholder{
+     font-size: 20px;
+}
+     
