--- a/style/style.css
+++ b/style/style.css
@@ -235,5 +235,56 @@ section{
 
 input::placeholder{
      font-size: 20px;
+     font-weight: 300;
 }
-     
+.donate-button{
+    font-size: 15px;
+    font-weight: 600;
+    padding: 14px 28px;
+    background-color: #006A50;
+    color: white;
+    border-radius: 7px;
+    border: none;
+}
+.button-container{
+    display: flex;
+    justify-content: center;
+
+}
+.donate-dis{
+    margin-bottom: 30px;
+}
+/* newsletter section */
+.newsletter-title{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 20px;
+}
+ .new-sub{
+    display: flex;
+    justify-content: center;
+ }
+ .email-sec{
+    font-size: 2.2em;
+    border-radius: 8px 0 0 8px;
+ }
+ .newl-btn{
+    font-size: 15px;
+    font-weight: 600;
+    padding: 14px 28px;
+    background-color: #006A50;
+    color: white;
+    border: none;
+    border-radius: 0 8px 8px 0;
+
+ }
+ .last-para{
+    display: flex;
+    justify-content: center;
+ }
+.newsletter-sec{
+    background-color: #C6E4D6;
+    border-radius: 24px;
+    padding: 66px 120px;
+}
