--- a/style/style.css
+++ b/style/style.css
@@ -163,7 +163,7 @@ section{
     font-weight: 600;
 }
 .quote-content{
-    background-image: url(/assets/quote-bg.png);
+    background-image: url(assets/quote-bg.png);
     background-position: left top ;
     background-repeat: no-repeat;
     padding: 40px 20px;
