--- a/style/style.css
+++ b/style/style.css
@@ -299,5 +299,17 @@ border:  1px solid #000000;
     color: white;
 
 }
+/* footer section */
+.footer{
+      text-align: center;
+      
+}
+.social-icon{
+     display: flex;
+     gap: 20px;
+     justify-content: center;
+
+}
+
     
 
