--- a/style/style.css
+++ b/style/style.css
@@ -140,7 +140,6 @@ section{
     align-items: center;
     gap: 10px;
      
-
 }
 .card{
     padding: 19px 19px 105px 19px;
@@ -288,7 +287,7 @@ input::placeholder{
     border-radius: 24px;
     padding: 66px 120px;
 }
- 
+ /* hover effect */
 .hover-efect:hover{
 background: red;
 border:  1px solid #000000;
